contact form updated

--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,17 @@
         </header>
 
         <main>
-            <heading>About Me</heading>
+            <h2>Contact</h2>
             <hr>
-            Name
-            <input>John Smith</input><br>
-            Email
-            <input>example@gmail.com</input><br>
-            Message
-            <input></input>
-            <button>Submit</button>
+            <form>
+                Name:<br>
+                <input type="text" name="fullname" value="John Smith"><br>
+                Email:<br>
+                <input type="text" name="email" value="example@gmail.com"><br>
+                Message:<br>
+                <input type="text" name="message"><br>
+                <input type="submit" value="Submit">
+            </form>
         </main>
     </body>
 </html>
