--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
 
         <main>
-            <heading>About Me</heading>
+            <h2>About Me</h2>
             <hr>
             <img src="assets/images/author1.png">
             <p>
