--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
+
     <head>
+        <meta charset="UTF-8">
         <title>Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
+    
     <body>
         <header>
             <h1>Bailee Dastugue</h1>
