--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
+    
     <head>
+        <meta charset="UTF-8">
         <title>Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <header>
