header with nav bar positioned correctly

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Bailee Dastugue</h1>
+            <h1 id="name">Bailee Dastugue</h1>
             <div>
                 <a href="index.html">About</a> | 
                 <a href="portfolio.html">Portfolio</a> |
@@ -17,7 +17,7 @@
         </header>
 
         <main>
-            <heading>About Me</heading>
+            <heading>Portfolio</heading>
             <hr>
             <div>Computational Biology Project</div>
             <div>Example HTML Page</div>
