a more responsive layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1 id="name">Bailee Dastugue</h1>
-            <div>
+            <div id="nav">
                 <a href="index.html">About</a> | 
                 <a href="portfolio.html">Portfolio</a> |
                 <a href="contact.html">Contact</a>
@@ -17,14 +17,16 @@
         </header>
 
         <main>
-            <heading>Portfolio</heading>
+            <h2>Portfolio</h2>
             <hr>
             <div>Computational Biology Project</div>
             <div>Example HTML Page</div>
-            <div>Portflio Mock-Up</div>
+            <div>Portfolio Mock-Up</div>
             <div>Button Game</div>
             <div>Cat Game</div>
         </main>
 
+        <footer class="bottom">
+        </footer>
     </body>
 </html>
