footer is.. good enough

--- a/contact.html
+++ b/contact.html
@@ -8,27 +8,31 @@
     </head>
 
     <body>
-        <header>
-            <h1>Bailee Dastugue</h1>
-            <div>
-                <a href="index.html">About</a> | 
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="contact.html">Contact</a>
+        <div id="container">
+            <div id="header">
+                <h1>Bailee Dastugue</h1>
+                <div id="nav">
+                    <a href="index.html">About</a> | 
+                    <a href="portfolio.html">Portfolio</a> |
+                    <a href="contact.html">Contact</a>
+                </div>
             </div>
-        </header>
 
-        <main>
-            <h2>Contact</h2>
-            <hr>
-            <form>
-                Name:<br>
-                <input type="text" name="fullname" value="John Smith"><br>
-                Email:<br>
-                <input type="text" name="email" value="example@gmail.com"><br>
-                Message:<br>
-                <input type="text" name="message"><br>
-                <input type="submit" value="Submit">
-            </form>
-        </main>
+            <div id="main">
+                <h2>Contact</h2>
+                <hr>
+                <form>
+                    Name:<br>
+                    <input type="text" name="fullname" value="John Smith"><br>
+                    Email:<br>
+                    <input type="text" name="email" value="example@gmail.com"><br>
+                    Message:<br>
+                    <input type="text" name="message"><br>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+            <div id="footer">
+            </div>
+        </div>
     </body>
 </html>
