--- a/portfolio.html
+++ b/portfolio.html
@@ -7,26 +7,28 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header>
-            <h1 id="name">Bailee Dastugue</h1>
-            <div id="nav">
-                <a href="index.html">About</a> | 
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="contact.html">Contact</a>
+        <div id="container">
+            <div id="header">
+                <h1 id="name">Bailee Dastugue</h1>
+                <div id="nav">
+                    <a href="index.html">About</a> | 
+                    <a href="portfolio.html">Portfolio</a> |
+                    <a href="contact.html">Contact</a>
+                </div>
             </div>
-        </header>
 
-        <main>
-            <h2>Portfolio</h2>
-            <hr>
-            <div>Computational Biology Project</div>
-            <div>Example HTML Page</div>
-            <div>Portfolio Mock-Up</div>
-            <div>Button Game</div>
-            <div>Cat Game</div>
-        </main>
+            <div id="main">
+                <h2>Portfolio</h2>
+                <hr>
+                <div>Computational Biology Project</div>
+                <div>Example HTML Page</div>
+                <div>Portfolio Mock-Up</div>
+                <div>Button Game</div>
+                <div>Cat Game</div>
+            </div>
 
-        <footer class="bottom">
-        </footer>
+            <div id="footer">
+            </div>
+        </div>
     </body>
 </html>
