contact form styled

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <div id="main">
                 <h2>Contact</h2>
                 <hr>
-                <form>
+                <div id="form">
                     Name:<br>
                     <input type="text" name="fullname" value="John Smith"><br>
                     Email:<br>
@@ -29,7 +29,7 @@
                     Message:<br>
                     <input type="text" name="message"><br>
                     <input type="submit" value="Submit">
-                </form>
+                </div>
             </div>
             <div id="footer">
             </div>
