portfolio layout complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
 
-            <div id="main">
+            <div id="main" class="clearfix">
                 <h2>About Me</h2>
                 <hr>
                 <img src="assets/images/author1.png">
