--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,32 @@
             <div id="main">
                 <h2>Portfolio</h2>
                 <hr>
-                <div>Computational Biology Project</div>
-                <div>Example HTML Page</div>
-                <div>Portfolio Mock-Up</div>
-                <div>Button Game</div>
-                <div>Cat Game</div>
+                    <div class="flex-container" class="clearfix">
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <div class="title">Cat Game</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <div class="title">Cat Game</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <div class="title">Cat Game</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <div class="title">Cat Game</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <div class="title">Cat Game</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <div class="title">Cat Game</div>
+                            </div>
+                </div>
             </div>
 
             <div id="footer">
