portfolio titles changed

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,28 +22,28 @@
                 <hr>
                     <div class="flex-container" class="clearfix">
                             <div id="port">
-                                <img src="https://loremflickr.com/320/240?random=1" />
+                                <img src="https://loremflickr.com/320/240/kitten/?random=1" />
+                                <div class="title">RStudio Work</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240/kitten/?random=2" />
+                                <div class="title">Portfolio Mock-Up</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240/kitten/?random=3" />
+                                <div class="title">HTML Practice</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240/kitten/?random=4" />
+                                <div class="title">CSS Practice</div>
+                            </div>
+                            <div id="port">
+                                <img src="https://loremflickr.com/320/240/kitten/?random=5" />
                                 <div class="title">Cat Game</div>
                             </div>
                             <div id="port">
-                                <img src="https://loremflickr.com/320/240?random=1" />
-                                <div class="title">Cat Game</div>
-                            </div>
-                            <div id="port">
-                                <img src="https://loremflickr.com/320/240?random=1" />
-                                <div class="title">Cat Game</div>
-                            </div>
-                            <div id="port">
-                                <img src="https://loremflickr.com/320/240?random=1" />
-                                <div class="title">Cat Game</div>
-                            </div>
-                            <div id="port">
-                                <img src="https://loremflickr.com/320/240?random=1" />
-                                <div class="title">Cat Game</div>
-                            </div>
-                            <div id="port">
-                                <img src="https://loremflickr.com/320/240?random=1" />
-                                <div class="title">Cat Game</div>
+                                <img src="https://loremflickr.com/320/240/kitten/?random=6" />
+                                <div class="title">Button Game</div>
                             </div>
                 </div>
             </div>
