lots of changes, incl. additional CSS pages

--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
-        <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/base.css">
     </head>
 
     <body>
         <div id="container">
-            <div id="header">
+            <header class="clearfix">
                 <h1>Bailee Dastugue</h1>
                 <div id="nav">
                     <a href="index.html">About</a> | 
                     <a href="portfolio.html">Portfolio</a> |
                     <a href="contact.html">Contact</a>
                 </div>
-            </div>
+            </header>
 
-            <div id="main">
+            <div class="flex-container">
+            <main class="clearfix">
                 <h2>Contact</h2>
                 <hr>
                 <div id="form">
@@ -31,9 +33,10 @@
                     <input type="text" name="message"><br>
                     <input type="submit" value="Submit">
                 </div>
+            </main>
             </div>
-            <div id="footer">
-            </div>
+            <footer>
+            </footer>
         </div>
     </body>
 </html>
