--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
-        <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/base.css">
     </head>
     
     <body>
-        <div id="container">
-            <div id="header">
+        <div class="container">
+            <header class="clearfix">
                 <h1>Bailee Dastugue</h1>
                 <div id="nav">
                     <a href="index.html">About</a> | 
                     <a href="portfolio.html">Portfolio</a> |
                     <a href="contact.html">Contact</a>
                 </div>
-            </div>
+            </header>
 
-            <div id="main" class="clearfix">
+            <div class="flex-container">
+            <main class="clearfix">
                 <h2>About Me</h2>
                 <hr>
                 <img src="assets/images/author1.png">
@@ -73,10 +75,11 @@
                     Morbi quis commodo odio aenean sed adipiscing diam donec adipiscing. Nec ultrices dui sapien eget. Malesuada proin libero nunc consequat. 
                     Sapien pellentesque habitant morbi tristique senectus.
                 </p>
+            </main>
             </div>
             
-            <div id="footer">
-            </div>
+            <footer>
+            </footer>
         </div>
     </body>
 </html>
