--- a/portfolio.html
+++ b/portfolio.html
@@ -4,53 +4,52 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
-        <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/base.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css">
     </head>
     <body>
-        <div id="container">
-            <div id="header">
-                <h1 id="name">Bailee Dastugue</h1>
+        <div class="container">
+            <header class="clearfix">
+                <h1>Bailee Dastugue</h1>
                 <div id="nav">
                     <a href="index.html">About</a> | 
                     <a href="portfolio.html">Portfolio</a> |
                     <a href="contact.html">Contact</a>
                 </div>
-            </div>
+            </header>
 
-            <div id="main">
+
+
+            <div class="flex-container">
+                <main class="clearfix">
                 <h2>Portfolio</h2>
                 <hr>
-                    <div class="flex-container" class="clearfix">
+                    <div class="flex-container clearfix" id="portfolio__background">
                             <div id="port">
-                                <img src="https://loremflickr.com/320/240/kitten/?random=1" />
-                                <div class="title">RStudio Work</div>
+                                <a href="https://baileedastugue.netlify.com" target="_blank"><img src="assets/images/RStudio.png"/></a>
+                                <div class="title"><a href="https://baileedastugue.netlify.com">RStudio Work</a></div>
                             </div>
                             <div id="port">
-                                <img src="https://loremflickr.com/320/240/kitten/?random=2" />
-                                <div class="title">Portfolio Mock-Up</div>
+                                <a href="https://baileedastugue.github.io/aboutMe_inclass/" target="_blank"><img src="assets/images/AboutMe.png"/></a>
+                                <div class="title"><a href="https://baileedastugue.github.io/aboutMe_inclass/" target="_blank">About Me Mock-Up</a></div>
                             </div>
                             <div id="port">
-                                <img src="https://loremflickr.com/320/240/kitten/?random=3" />
-                                <div class="title">HTML Practice</div>
+                                <a href="https://scratch.mit.edu/projects/359717363/" target="_blank"><img src="assets/images/CatGame.png"/></a>
+                                <div class="title"><a href="https://scratch.mit.edu/projects/359717363/" target="_blank">Cat Game</a></div>
                             </div>
                             <div id="port">
-                                <img src="https://loremflickr.com/320/240/kitten/?random=4" />
-                                <div class="title">CSS Practice</div>
+                                <a href="https://scratch.mit.edu/projects/359711452/" target="_blank"><img src="assets/images/ButtonGame.png"/></a>
+                                <div class="title"><a href="https://scratch.mit.edu/projects/359711452/" target="_blank">Button Game</a></div>
                             </div>
-                            <div id="port">
-                                <img src="https://loremflickr.com/320/240/kitten/?random=5" />
-                                <div class="title">Cat Game</div>
-                            </div>
-                            <div id="port">
-                                <img src="https://loremflickr.com/320/240/kitten/?random=6" />
-                                <div class="title">Button Game</div>
-                            </div>
+                            
                 </div>
-            </div>
+            </main>
 
-            <div id="footer">
-            </div>
+            <footer>
+            </footer>
+        </div>
         </div>
     </body>
 </html>
