sticky footer on contact page

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="stylesheet" type="text/css" href="assets/css/base.css">
     </head>
-
+    
     <body>
-        <div id="container">
+        <div class="container">
             <header class="clearfix">
                 <h1>Bailee Dastugue</h1>
                 <div id="nav">
@@ -21,20 +21,21 @@
             </header>
 
             <div class="flex-container">
-            <main class="clearfix">
-                <h2>Contact</h2>
-                <hr>
-                <div id="form">
-                    Name:<br>
-                    <input type="text" name="fullname" value="John Smith"><br>
-                    Email:<br>
-                    <input type="text" name="email" value="example@gmail.com"><br>
-                    Message:<br>
-                    <input type="text" name="message"><br>
-                    <input type="submit" value="Submit">
-                </div>
-            </main>
+                <main class="clearfix">
+                    <h2>Contact</h2>
+                    <hr>
+                    <div id="form">
+                        Name:<br>
+                        <input type="text" name="fullname" value="John Smith"><br>
+                        Email:<br>
+                        <input type="text" name="email" value="example@gmail.com"><br>
+                        Message:<br>
+                        <input type="text" name="message"><br>
+                        <input type="submit" value="Submit">
+                    </div>
+                </main>
             </div>
+            
             <footer>
             </footer>
         </div>
